--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Fine, Thank you, and you.
+title: Fine, thank you, and you.
 subtitle: 一切安好，感谢有你，与你同行。
 description:
 author: Lyon Wu
