--- a/themes/apollo/_config.yml
+++ b/themes/apollo/_config.yml
@@ -7,13 +7,13 @@ menu:
     path: /archives/
     icon: fa fa-folder-open-o
 
+  - name: English
+    path: /tags/english
+    icon: fa fa-file
+
   - name: GitHub
     path: https://github.com/haoliangwu
     icon: fa fa-github-alt
-
-  - name: English
-    path: /english/
-    icon: fa fa-file
 
   - name: About
     path: http://www.lagou.com/resume/preview.html
