--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ skip_render:
 
 # Writing
 new_post_name: :title.md # File name of new posts
-default_layout: post
+default_layout: draft
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
@@ -71,4 +71,4 @@ deploy:
   type: git
   repository: git@github.com:haoliangwu/haoliangwu.github.io.git
   branch: master
-  
+
