--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.2.2"
+    "version": "3.7.0"
   },
   "dependencies": {
     "hexo": "^3.2.0",
@@ -13,12 +13,19 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.1.0",
     "hexo-generator-index": "^0.2.0",
+    "hexo-generator-search": "^2.2.5",
+    "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-offline": "^0.2.3",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-jade": "^0.3.0",
+    "hexo-renderer-markdown-it": "^3.4.1",
     "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-sass": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "markdown-it-emoji": "^1.4.0",
+    "twemoji": "^2.5.1"
   }
 }
