--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.0",
     "gray-matter": "^4.0.2",
     "next": "12.0.8",
     "nextra": "^2.0.0-beta.5",
