--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
+  "name": "littlelyon",
+  "version": "0.1.0",
   "private": true,
-  "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "node ./scripts/gen-rss.js && next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.0.0",
-    "gray-matter": "^4.0.2",
-    "next": "12.0.8",
-    "nextra": "^2.0.0-beta.5",
-    "nextra-theme-blog": "^2.0.0-beta.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rss": "^1.2.2"
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "none",
-    "semi": false
+    "@types/node": "20.1.0",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.1",
+    "autoprefixer": "10.4.14",
+    "gray-matter": "^4.0.3",
+    "next": "13.4.1",
+    "nextra": "^2.5.0",
+    "nextra-theme-blog": "^2.5.0",
+    "nextra-theme-docs": "^2.5.0",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rss": "^1.2.2",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   }
 }
