--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-photo-view": "^1.2.3",
     "rss": "^1.2.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
