--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nextra-theme-blog": "^2.13.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "18.2.0",
     "react-photo-view": "^1.2.3",
     "rss": "^1.2.2",
