--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "marked": "^12.0.1",
         "react": "^18.3.0",
         "react-code-blocks": "^0.1.6",
+        "react-dom": "18.3.0",
         "react-photo-view": "^1.2.4",
         "tailwindcss": "^3.4.3"
     },
