--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@astrojs/rss": "^4.0.5",
         "@astrojs/sitemap": "^3.1.2",
         "@astrojs/tailwind": "^5.1.0",
+        "@vercel/analytics": "^1.3.1",
+        "@vercel/speed-insights": "^1.0.12",
         "astro": "^4.5.17",
         "marked": "^12.0.1",
         "react": "^18.3.0",
