--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "astro/tsconfigs/strict",
     "compilerOptions": {
         "strictNullChecks": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "experimentalDecorators": true
     }
 }
